--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-compatible" content="ie=edge"/>
   <title> THIKA SUPERHIGHWAY</title>
-<!--   <link href="style.css" rel="stylesheet" type="text/css"> -->
+  <link href="style.css" rel="stylesheet" type="text/css">
 <body>
   <header>
 
