--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
     <div class="row">
       <ul class="main-nav">
-        <li><a href="my project.html"> HOME </a></li>
+        <li><a href="index.html"> HOME </a></li>
         <li><a href="about.html"> ABOUT </a></li>
         <li><a href="services.html"> SERVICES </a></li>
         <li><a href="problems.html"> PROBLEMS </a></li>
